src/assetmanagement/GrpcAPI/k8s/grpc-http-rules.yml
---
kind: Service
apiVersion: v1
metadata:
  name: asset-management-grpc-api-proxy
  namespace: kong-public
  annotations:
    "konghq.com/override": "mission-health-checking"
spec:
  type: ExternalName
  externalName: asset-management-grpc-api-service.netponto.svc
  ports:
     - port: 8090
       targetPort: 8090
       protocol: TCP 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asset-get
  namespace: kong-public
  annotations:
    kubernetes.io/ingress.class: kong-public
spec:
  rules:
    - http:
       paths:
       - path: /([A-Z, a-z, 0-9]{1,4})/asset
         pathType: Prefix
         backend:
          service:
            name: asset-management-grpc-api-proxy
            port:
              number: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asset-post
  namespace: kong-public
  annotations:
    kubernetes.io/ingress.class: kong-public
spec:
  rules:
  - http:
      paths:
      - path: /([A-Z, a-z, 0-9]{1,4})/asset
        pathType: Prefix
        backend:
          service:
             name: asset-management-grpc-api-proxy
             port:
               number: 8090
